# mycodec

./: CMakeLists.txt
lib/ffmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp
